src/objects/WidgetPreset__mdt.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClassNamespacePrefix__c</fullName>
        <label>Apex Class Namespace Prefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultNotification__c</fullName>
        <label>Default Notification</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceType__c</fullName>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Widget Present</label>
    <pluralLabel>Widget Presents</pluralLabel>
</CustomObject>